Authentication functionality, apis

--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,12 @@
         "node": "current"
       }
     }]
+  ],
+  "sourceMap": "inline",
+  "retainLines": true,
+  "plugins": [
+    ["babel-plugin-transform-builtin-extend", {
+        "globals": ["Error"]
+    }]
   ]
 }
