--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-MONGODB_URI='mongodb://bootcamp:passwd@localhost:27017/db_0'
+MONGODB_URI='mongodb://bootcamp:passwd@localhost:27017/db_0?authSource=admin'
 HOST_WIN32='localhost'
 HOST_DARWIN='localhost'
 HOST_LINUX='0.0.0.0'
