--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.4",
+    "multer": "^1.3.1",
     "winston": "^3.0.0-rc6"
   },
   "devDependencies": {
