add storage to mogo and update docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,5 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: bootcamp
       MONGO_INITDB_ROOT_PASSWORD: passwd
+    volumes:
+      - './data:/data/db'
