--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec babel-node ./server.js",
     "start": "babel-node ./server.js",
-    "test": "mocha --require @babel/polyfill --require @babel/register --require ./tests/bootstrap.js ./tests/*.test.js --exit"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -38,11 +38,14 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
     "prettier": "^1.13.5",
     "sinon": "^7.1.1",
