--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.10",
     "mongoose": "^5.1.4",
     "multer": "^1.3.1",
+    "npm": "^6.5.0",
     "winston": "^3.0.0-rc6"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
+    "chai": "^4.2.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
