--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "lodash": "^4.17.10",
     "mongoose": "^5.1.4",
     "multer": "^1.3.1",
+    "node-pre-gyp": "^0.12.0",
     "npm": "^6.5.0",
     "winston": "^3.0.0-rc6"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.1.6",
+    "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
